feat: update types
Closes #581
